// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`middlewares/auth \`token\` option as string (with default \`prefix\` and \`header\`) 1`] = `
{
  "body": "{"id":"1","query":"","variables":{}}",
  "headers": {
    "Accept": "*/*",
    "Authorization": "Bearer 123",
    "Content-Type": "application/json",
  },
  "method": "POST",
  "signal": AbortSignal {},
}
`;

exports[`middlewares/auth \`token\` option as thunk (with custom \`prefix\` and \`header\`) 1`] = `
{
  "body": "{"id":"1","query":"","variables":{}}",
  "headers": {
    "Accept": "*/*",
    "Content-Type": "application/json",
    "MyAuthorization": "MyBearer 333",
  },
  "method": "POST",
  "signal": AbortSignal {},
}
`;

exports[`middlewares/auth \`tokenRefreshPromise\` should be called on 401 response 1`] = `
[
  [
    "/graphql",
    {
      "body": "{"id":"1","query":"","variables":{}}",
      "headers": {
        "Accept": "*/*",
        "Authorization": "Bearer 123",
        "Content-Type": "application/json",
      },
      "method": "POST",
      "signal": AbortSignal {},
    },
  ],
  [
    "/graphql",
    {
      "body": "{"id":"1","query":"","variables":{}}",
      "headers": {
        "Accept": "*/*",
        "Authorization": "Bearer ValidToken",
        "Content-Type": "application/json",
      },
      "method": "POST",
      "signal": AbortSignal {},
    },
  ],
]
`;
